change failure boolean to failure status
Signed-off-by: Neeharika-Sompalli <neeharika.sompalli@swirldslabs.com>